2004-05-11  Jan Patera <patera@users.sourceforge.net>

	* libjpeg/jpeg-data.c: memory leak in jpeg_data_set_exif_data,
	  return type of jpeg_data_save_file
	* libexif/exif-entry.c: proper mnote size on save
	* libexif/olympus: saving Nikon mnote

2004-05-10  Jan Patera <patera@users.sourceforge.net>

	* libexif: Support of Nikon maker note

2004-05-07  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: fix of EXIF_TAG_COLOR_SPACE,
	  value 9 of EXIF_TAG_FLASH.
	* libexif/exif-entry.c: Fix of bug #937505 submitted by Hubert
	  Verstraete <hubs@users.sourceforge>: value 0x0058 of
	  EXIF_TAG_FLASH.

2004-05-04  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus: Make it support Nikon maker notes, too. 
	  Code based on work by Serge Droz <serge.droz@psi.ch>.

2004-05-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_initialize):
	  Added EXIF_TAG_PIXEL_[X,Y]_DIMENSION (thanks to Antonio Scuri
	  <scuri@tecgraf.puc-rio.br>).

2004-05-03  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.c: Hide some functions there that have been 
	  requested by Antonio Scuri <scuri@tecgraf.puc-rio.br>.

2004-05-02  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: GETTEXT_PACKAGE=${PACKAGE}-${LIBEXIF_CURRENT}
	  on request of Ilya Konstantinov <future@shiny.co.il>
	  (Debian needs it).

2004-05-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-marker.h: No implicit enum declaration. Seen by
	  Antonio Scuri <scuri@tecgraf.puc-rio.br>.

2004-04-04  Lutz Mueller lutz@users.sourceforge.net

	* libexif/exif-data.c: If we don't know a tag we are going to parse,
	  stop loading. This should fix bug #138238.

2004-04-02  Jan Patera <patera@users.sourceforge.net>

	* libexif/pentax/exif-mnote-data-pentax.c: correct search for values
 
2004-03-19 Joerg Hoh <hohjg@users.sourceforge.net>
        * libexif/olympus/exif-mnote-data-olympus.c: code 
	  simplification
