@@ -1,3 +1,9 @@
+2004-05-12  Jan Patera <patera@users.sourceforge.net>
+
+	* libexif/exif-utils.h: definition of MIN
+	* libexif/pentax/mnote-pentax-entry.c: min -> MIN
+	  (found by Serge Droz <serge.droz@psi.ch>)
+
 2004-05-11  Jan Patera <patera@users.sourceforge.net>
 
 	* libjpeg/jpeg-data.c: memory leak in jpeg_data_set_exif_data,
